# jsfuzz

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
jsfuzz/: inspector.py
test/: test_inspector.py
test/resources/: test_payload.json
