[tool.poetry]
name = "jsfuzz"
version = "0.1.0"
description = "Inspect json data and fuzzy search for values or key names"
authors = ["Tung Dang <tung.dang@otto.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
rapidfuzz = "^3.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
